--- a/config/database.yml
+++ b/config/database.yml
@@ -17,35 +17,30 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  database: local_db
+  username: ayrtonaoki
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: crypto_wallet_development
-
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
   #username: crypto_wallet
-
   # The password associated with the postgres role (username).
   #password:
-
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
   #host: localhost
-
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
   #port: 5432
-
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
-
   # Minimum log levels, in increasing order:
   #   debug5, debug4, debug3, debug2, debug1,
   #   log, notice, warning, error, fatal, and panic
@@ -57,7 +52,6 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: crypto_wallet_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +74,3 @@ test:
 #
 production:
   <<: *default
-  database: crypto_wallet_production
-  username: crypto_wallet
-  password: <%= ENV['CRYPTO_WALLET_DATABASE_PASSWORD'] %>
